# html-css-homework

./: index.html  main.py  pyproject.toml  server.py
