[tool.poetry]
name = "html-css-homework"
version = "0.1.0"
description = ""
authors = ["miroshnikoff <taxi83080@gmail.com>"]
readme = "README.md"
packages = [{include = "html_css_homework"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
